# farabee-ua-generator

./: setup.cfg
src/ua_generator/: __init__.py  client_hints.py  exceptions.py  headers.py  options.py  serialization.py  user_agent.py  utils.py
src/ua_generator/data/: __init__.py  generator.py  version.py
src/ua_generator/data/browsers/: chrome.py  edge.py  firefox.py  safari.py
tests/: test_browser.py  test_client_hints.py  test_device.py  test_exceptions.py  test_headers.py  test_options.py  test_platform.py  test_serialization.py  test_user_agent.py  test_utils.py  test_version.py  test_version_range.py
