[metadata]
name = farabee-ua-generator
version = 2.0.3
author = Dipto Farabee
author_email = diptofarabee@gmail.com
description = A Realistic random user-agent generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dipto-Farabee/farabee-ua-generator
project_urls =
    Bug Tracker = https://github.com/Dipto-Farabee/farabee-ua-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
